chore: enable stricter linters and fix issues
Enabled revive, gosec, gocritic, prealloc, and others.
Fixed over 100+ issues including:
- Security: file permissions (0600/0750) and path cleaning
- Style: added package and exported type comments
- Bugs: fixed switch syntax and logic errors
- Performance: pre-allocated slices
- Removed unused code

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -5,5 +5,14 @@ linters:
   enable:
     - govet
     - staticcheck
+    - unused
+    - revive
+    - gocritic
+    - misspell
+    - gosec
+    - prealloc
+    - unconvert
+    - bodyclose
+    - ineffassign
 issues:
   exclude-use-default: false
