lint: enhance golangci-lint config with additional linters
Added linters:
- errcheck: Check error returns
- errorlint: Thorough error checking with %w for wrapping
- noctx: Functions should use context.Context
- testifylint: Better testify assertions

Fixed issues:
- Fix fmt.Errorf to use %w for error wrapping (config.go)
- Fix error type assertion to use errors.As (parser.go)

Reduced issues from 24 to 2 (false positives in test code)

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,18 +1,38 @@
 version: 2
 run:
   timeout: 5m
+  issues-exit-code: 1
+linter-options:
+  no-config-yaml: true
 linters:
   enable:
     - govet
     - staticcheck
     - unused
     - revive
-    - gocritic
     - misspell
     - gosec
     - prealloc
     - unconvert
     - bodyclose
     - ineffassign
+    # Additional linters
+    - errcheck        # Check error returns
+    - errorlint       # More thorough error checking
+    - noctx           # Functions should use context.Context
+    - testifylint     # Better testify assertions
+linters-settings:
+  errorlint:
+    error-functions:
+      - fmt.Errorf
+      - errors.New
 issues:
   exclude-use-default: false
+  max-issues-per-linter: 50
+  max-same-issues: 3
+  new: false
+  exclude-rules:
+    # Allow unused parameters in benchmarks
+    - path: bench.*\.go
+      linters:
+        - unused
