--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -5,9 +5,6 @@ vars:
   COVERAGE_FILE: coverage.out
   COVERAGE_HTML: coverage.html
 
-env:
-  CGO_ENABLED: '0'
-
 tasks:
   default:
     desc: Run tests (default task)
@@ -16,11 +13,15 @@ tasks:
 
   build:
     desc: Build the CLI binary
+    env:
+      CGO_ENABLED: '0'
     cmds:
       - go build -o {{.BINARY_NAME}} ./cmd/db-catalyst
 
   build-prod:
     desc: Build optimized binary for release
+    env:
+      CGO_ENABLED: '0'
     cmds:
       - go build -ldflags="-s -w -trimpath" -o {{.BINARY_NAME}} ./cmd/db-catalyst
 
@@ -36,6 +37,8 @@ tasks:
 
   test-race:
     desc: Run tests with race detector
+    env:
+      CGO_ENABLED: '1'  # Required for race detector
     cmds:
       - go test -race ./...
 
