--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -10,9 +10,11 @@ on:
 
 jobs:
   vulncheck:
+    name: Vulnerability Check
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
 
     - name: Set up Go
       uses: actions/setup-go@v5
@@ -26,9 +28,16 @@ jobs:
       run: govulncheck ./...
 
   gosec:
+    name: Gosec Security Scan
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: '1.25'
 
     - name: Run Gosec
       uses: securego/gosec@master
