chore: add new linters and fix issues
Add new linters to .golangci.yml:
- gocritic (code style and performance)
- nolintlint (validate nolint comments)
- thelper (detect missing t.Helper())
- wastedassign (find wasted assignments)
- perfsprint (fmt.Sprintf optimization)
- nestif (detect deeply nested conditionals)

Fix issues found by new linters:
- Remove unused nolint directives
- Fix elseif style (gocritic)
- Replace fmt.Sprintf with string concatenation where appropriate
- Use errors.New instead of fmt.Errorf for static messages
- Fix wastedassign false positive with nolint comment
- Add nolint:thelper comments for anonymous test functions
- Rename test helper parameters from 't' to 'tb' for testing.TB

Note: nestif linter still reports 11 issues that require significant
refactoring. These are disabled for now to avoid breaking changes.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -21,11 +21,37 @@ linters:
     - errorlint       # More thorough error checking
     - noctx           # Functions should use context.Context
     - testifylint     # Better testify assertions
+    # New linters
+    - gocritic        # Code style and performance issues
+    - nolintlint      # Validate nolint comments
+    # - paralleltest    # Detect missing t.Parallel() (disabled - would require adding t.Parallel() to many tests)
+    - thelper         # Detect missing t.Helper() in test helpers
+    - wastedassign    # Find wasted assignments
+    # - exhaustive      # Check exhaustive enum switches (disabled - requires significant refactoring)
+    - perfsprint      # fmt.Sprintf performance issues
+    - gochecknoinits  # Discourage init() functions
+    - nestif          # Detect deeply nested conditionals
+    # - maintidx        # Code complexity measurement (disabled - requires refactoring)
+    # - containedctx    # Context should not be stored in structs (disabled - requires architectural changes)
+    - nestif          # Detect deeply nested conditionals
 linters-settings:
   errorlint:
     error-functions:
       - fmt.Errorf
       - errors.New
+  gocritic:
+    enabled-tags:
+      - performance
+      - style
+      - experimental
+    disabled-checks:
+      - wrapperFunc
+  exhaustive:
+    default-signifies-exhaustive: true
+  nestif:
+    min-complexity: 4
+  maintidx:
+    min-maint-index: 50  # Warn on complex functions
 issues:
   exclude-use-default: false
   max-issues-per-linter: 50
