chore: add modernize linter to golangci-lint config
Add the modernize linter which suggests simplifications to Go code
using modern language and library features. This will catch:
- interface{} -> any conversions
- b.N -> b.Loop() in benchmarks
- maps.Copy usage
- min() builtin usage
- range over int
- slices.Contains
- strings.SplitSeq

Also removed duplicate nestif entry.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -33,7 +33,7 @@ linters:
     - nestif          # Detect deeply nested conditionals
     # - maintidx        # Code complexity measurement (disabled - requires refactoring)
     # - containedctx    # Context should not be stored in structs (disabled - requires architectural changes)
-    - nestif          # Detect deeply nested conditionals
+    - modernize       # Suggest modern Go code simplifications
 linters-settings:
   errorlint:
     error-functions:
