chore: add slog linters to enforce structured logging best practices
Add two linters for log/slog usage:
- sloglint: Ensure consistent code style when using log/slog
- loggercheck: Check key-value pairs for common logger libraries

No issues found - codebase already uses slog correctly.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -34,6 +34,8 @@ linters:
     # - maintidx        # Code complexity measurement (disabled - requires refactoring)
     # - containedctx    # Context should not be stored in structs (disabled - requires architectural changes)
     - modernize       # Suggest modern Go code simplifications
+    - sloglint        # Ensure consistent slog usage
+    - loggercheck     # Check logger key-value pairs
 linters-settings:
   errorlint:
     error-functions:
