chore: Add magic number and constant detection linters
Added new linters to catch magic numbers and repeated strings:

New Linters:
- mnd: Detects magic numbers (with sensible exclusions for common values)
- goconst: Detects repeated strings that should be constants
- dupword: Detects duplicated words in comments

mnd Configuration:
- Ignores common numbers: 0, 1, 2, 3, 4, 5, 10, 64, 100, 1000, 1024
- Ignores file permissions: 0755, 0644, 0600
- Ignores stdlib functions like os.Chmod, strconv, time

goconst Configuration:
- Minimum string length: 3 characters
- Minimum occurrences: 3 times before warning
- Checks tests as well
- Also detects repeated number constants

These linters help maintain code quality by encouraging the use
of named constants instead of magic literals.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -36,6 +36,9 @@ linters:
     - modernize       # Suggest modern Go code simplifications
     - sloglint        # Ensure consistent slog usage
     - loggercheck     # Check logger key-value pairs
+    - mnd             # Detect magic numbers
+    - goconst         # Detect repeated strings that could be constants
+    - dupword         # Detect duplicated words in comments
 linters-settings:
   errorlint:
     error-functions:
@@ -54,6 +57,49 @@ linters-settings:
     min-complexity: 4
   maintidx:
     min-maint-index: 50  # Warn on complex functions
+
+  mnd:
+    # Magic number detector
+    checks:
+      - argument
+      - case
+      - condition
+      - return
+      - operation
+      - assign
+    ignored-numbers:
+      - "0"
+      - "1"
+      - "2"
+      - "3"
+      - "4"
+      - "5"
+      - "10"
+      - "64"
+      - "100"
+      - "1000"
+      - "1024"
+      - "0755"
+      - "0644"
+      - "0600"
+    ignored-functions:
+      - "os\\.Chmod"
+      - "os\\.Mkdir"
+      - "os\\.MkdirAll"
+      - "os\\.OpenFile"
+      - "strconv\\."
+      - "strings\\.SplitN"
+      - "time\\."
+
+  goconst:
+    # Detect repeated strings that could be constants
+    match-constant: true
+    min-len: 3
+    min-occurrences: 3
+    ignore-tests: false
+    numbers: true
+    min-occurrences-const: 2
+
 issues:
   exclude-use-default: false
   max-issues-per-linter: 50
