test: add comprehensive code generation verification tests
Add testing infrastructure to prevent code generation bugs:

1. Enhanced TestGeneratedGoCode_WithPreparedQueries:
   - Tests all prepared query configurations (basic, threadsafe, metrics)
   - Verifies compilation for each configuration
   - Catches variable redeclaration bugs in ThreadSafe mode

2. New TestDBTXInterfaceCompatibility:
   - Verifies generated DBTX interface matches *sql.DB and *sql.Tx
   - Compile-time type checking prevents interface mismatches
   - Tests QueryContext returns (*sql.Rows, error) and QueryRowContext returns *sql.Row

3. Added task commands:
   - task test-codegen: Run all codegen verification tests
   - task build-examples: Regenerate and build all examples
   - Updated task quick to include test-codegen

4. Updated AGENTS.md:
   - Added Pre-Commit Testing Requirements section
   - Documents the 4 required test steps before committing
   - Explains golden file strategy vs compilation tests

These tests would have caught all three bugs from the recent fixes:
- Variable redeclaration in prepared queries (ThreadSafe test)
- DBTX wrong return types (Interface compatibility test)
- QueryResult duplication (General compile test)

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -90,6 +90,22 @@ tasks:
     desc: Run all linters
     deps: [lint, vet, staticcheck]
 
+  test-codegen:
+    desc: Test code generation compiles correctly
+    cmds:
+      - go test ./test/e2e/... -v -run "TestGeneratedGoCode"
+      - go test ./test/e2e/... -v -run "TestDBTXInterfaceCompatibility"
+
+  build-examples:
+    desc: Regenerate and build all examples
+    cmds:
+      - go run ./cmd/db-catalyst -c examples/simple/db-catalyst.toml
+      - go run ./cmd/db-catalyst -c examples/advanced/db-catalyst.toml
+      - go run ./cmd/db-catalyst -c examples/complex/db-catalyst.toml
+      - go run ./cmd/db-catalyst -c examples/postgresql/db-catalyst.toml
+      - go run ./cmd/db-catalyst -c examples/mysql/db-catalyst.toml
+      - go build ./examples/...
+
   fuzz-tokenizer:
     desc: Fuzz test the tokenizer
     cmds:
@@ -220,8 +236,12 @@ tasks:
     deps: [lint-all, security, vulncheck, test-race, coverage-report]
 
   quick:
-    desc: Quick check (build + test)
-    deps: [build, test]
+    desc: Quick build, test, and verify
+    cmds:
+      - go build ./cmd/db-catalyst
+      - go test ./...
+      - task: test-codegen
+      - task: lint
 
   install:
     desc: Install binary to $GOPATH/bin
